# zappy_server

./: .gitignore  .travis.yml  Makefile  README.md
.ci/: install.sh  script.sh
src/: .#action_queue.c  .#health.c  action_gfx.c  action_player.c  action_player_2.c  action_player_3.c  action_player_4.c  action_player_broadcast.c  action_queue.c  action_queue_2.c  action_queue_3.c  check_arguments.c  cleanup.c  commands.c  commands_gfx.c  commands_gfx_2.c  commands_player.c  commands_player_2.c  eggs.c  (+55 more)
test/: CMakeLists.txt  Makefile  test_zappy_server.sh
test/example/: test.c
test/src/: arg.h  cleanup.h  l_list_test.h  main.c  test_dummies.c  test_dummies.h  tests.h
test/src/actions_not_queue/: action.c  action.h  player_broadcast.c  player_inventaire.c  player_life.c  player_moves.c  player_ressources.c  player_voir.c
test/src/args/: arg.c  arg.h  check_arguments.c  get_opt.c  get_opt_int.c  get_opt_string.c  read_arguments.c
test/src/cleanup/: cleanup.c  cleanup.h  cleanup_game.c  cleanup_test.h  rm_board.c  rm_team.c
test/src/commands/: command_match.c  commands.c  commands_command_match.c  commands_gfx.c  commands_player_life.c  commands_player_moves.c  commands_player_ressources.c  commands_player_voir.c  commands_player_voir.c.orig  commands_pre.c  commands_pre_gfx.c  commands_pre_test.h  commands_test.h  find_command.c
test/src/commands_pre/: commands_pre_gfx.c  commands_pre_test.h
test/src/connexion/: affect_team.c  client_error.c  close_client.c  connexion.c  do_read.c  do_write.c  process_input.c  read_buffer.c  test_connexion.h
test/src/init/: init.c  init_game_var.c  init_server.c  init_test.h
test/src/l_lists/: l_list.c  l_list_basic.c  l_list_check.c  l_list_iter.c  l_list_remove.c  l_list_test.h  linked_lists.h  linked_lists_test.h
test/src/message/: add_msg_to_player.c  add_msg_to_player_lst.c  message.c  message_test.h  rearrange_message_queue.c  update_pos_pointer.c
test/src/message_gfx/: message_gfx.c  message_gfx_multiple_client.c  message_gfx_player.c  message_gfx_player_2.c  message_gfx_player_3.c  message_gfx_server.c  message_gfx_test.h
test/src/message_player/: message_player.c  message_player_2.c  message_player_test.c  message_player_test.h
test/src/queue/: queue.c  queue.h  queue_add.c
